k8s/monitor/Prom/IngressRule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    # Specifies the ingress controller to use
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-class
  rules:
  - host: prom.nach-hi.click # Replace with your actual DNS or local host file entry
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-kube-prometheus-prometheus # Matches your Helm release
            port:
              number: 9090
